Rename project from EduDesk to StudDesk

--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.studdesk</groupId>
-    <artifactId>EduDesk</artifactId>
+    <artifactId>StudDesk</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>EduDesk - Student Management System</name>
+    <name>StudDesk - Student Management System</name>
     <description>Java Web-based Student Management System with CRUD operations</description>
 
     <properties>
@@ -52,7 +52,7 @@
     </dependencies>
 
     <build>
-        <finalName>EduDesk</finalName>
+        <finalName>StudDesk</finalName>
         <plugins>
             <!-- Maven Compiler Plugin -->
             <plugin>
@@ -82,7 +82,7 @@
                 <version>2.2</version>
                 <configuration>
                     <port>8081</port>
-                    <path>/EduDesk</path>
+                    <path>/StudDesk</path>
                 </configuration>
             </plugin>
         </plugins>
